# cpp-sfml-snake

./: CMakeLists.txt  README.md
include/: AI.h  Board.hpp  Direction.hpp  Food.hpp  Game.hpp  GameState.hpp  Renderer.hpp  Snake.hpp
src/: AI.cpp  Board.cpp  Food.cpp  Game.cpp  Renderer.cpp  Snake.cpp
